{
  "version": 4,
  "terraform_version": "1.3.7",
  "serial": 27,
  "lineage": "771042e9-2863-caa6-522d-d733abf0479a",
  "resources": [
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "us-east-1a",
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0d0657752da1cacea",
            "domain": "vpc",
            "id": "eipalloc-0d0657752da1cacea",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-52-203-192-199.compute-1.amazonaws.com",
            "public_ip": "52.203.192.199",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "development-nat-eip",
              "environment": "development",
              "owner": "terraform",
              "resource": "development-vpc-networking"
            },
            "tags_all": {
              "Name": "development-nat-eip",
              "environment": "development",
              "owner": "terraform",
              "resource": "development-vpc-networking"
            },
            "vpc": true
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.ig",
            "module.vpc.aws_vpc.vpc"
          ]
        },
        {
          "index_key": "us-east-1b",
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0ce0552b5bf1cbf57",
            "domain": "vpc",
            "id": "eipalloc-0ce0552b5bf1cbf57",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-34-224-19-202.compute-1.amazonaws.com",
            "public_ip": "34.224.19.202",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "development-nat-eip",
              "environment": "development",
              "owner": "terraform",
              "resource": "development-vpc-networking"
            },
            "tags_all": {
              "Name": "development-nat-eip",
              "environment": "development",
              "owner": "terraform",
              "resource": "development-vpc-networking"
            },
            "vpc": true
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.ig",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "ig",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:522838200446:internet-gateway/igw-001ee6e49549ffa94",
            "id": "igw-001ee6e49549ffa94",
            "owner_id": "522838200446",
            "tags": {
              "Name": "development-igw",
              "environment": "development",
              "owner": "terraform",
              "resource": "development-vpc-networking"
            },
            "tags_all": {
              "Name": "development-igw",
              "environment": "development",
              "owner": "terraform",
              "resource": "development-vpc-networking"
            },
            "vpc_id": "vpc-0059ae5eb3bd0f8e2"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "us-east-1a",
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0d0657752da1cacea",
            "connectivity_type": "public",
            "id": "nat-0f920ec19d25b9f12",
            "network_interface_id": "eni-089eb20490eaddbd2",
            "private_ip": "10.11.1.166",
            "public_ip": "52.203.192.199",
            "subnet_id": "subnet-0df75033464e0492c",
            "tags": {
              "Name": "development-nat",
              "environment": "development",
              "owner": "terraform",
              "resource": "development-vpc-networking"
            },
            "tags_all": {
              "Name": "development-nat",
              "environment": "development",
              "owner": "terraform",
              "resource": "development-vpc-networking"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nat_eip",
            "module.vpc.aws_internet_gateway.ig",
            "module.vpc.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.vpc"
          ]
        },
        {
          "index_key": "us-east-1b",
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0ce0552b5bf1cbf57",
            "connectivity_type": "public",
            "id": "nat-03db197fd17162620",
            "network_interface_id": "eni-0c17dda1b828e42b9",
            "private_ip": "10.11.2.37",
            "public_ip": "34.224.19.202",
            "subnet_id": "subnet-0e9a51fc292b6a9d7",
            "tags": {
              "Name": "development-nat",
              "environment": "development",
              "owner": "terraform",
              "resource": "development-vpc-networking"
            },
            "tags_all": {
              "Name": "development-nat",
              "environment": "development",
              "owner": "terraform",
              "resource": "development-vpc-networking"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nat_eip",
            "module.vpc.aws_internet_gateway.ig",
            "module.vpc.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "us-east-1a",
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-088b086f24cabd03b1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0f920ec19d25b9f12",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-088b086f24cabd03b",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.nat_eip",
            "module.vpc.aws_internet_gateway.ig",
            "module.vpc.aws_nat_gateway.nat",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private_subnet",
            "module.vpc.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.vpc"
          ]
        },
        {
          "index_key": "us-east-1b",
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0e5c1d639ffad69941080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-03db197fd17162620",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0e5c1d639ffad6994",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.nat_eip",
            "module.vpc.aws_internet_gateway.ig",
            "module.vpc.aws_nat_gateway.nat",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private_subnet",
            "module.vpc.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-001ee6e49549ffa94",
            "id": "r-rtb-0c943b9f6fc70ac4b1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0c943b9f6fc70ac4b",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.ig",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "us-east-1a",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:522838200446:route-table/rtb-088b086f24cabd03b",
            "id": "rtb-088b086f24cabd03b",
            "owner_id": "522838200446",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "development-private-route-table",
              "environment": "development",
              "owner": "terraform",
              "resource": "development-vpc-networking"
            },
            "tags_all": {
              "Name": "development-private-route-table",
              "environment": "development",
              "owner": "terraform",
              "resource": "development-vpc-networking"
            },
            "timeouts": null,
            "vpc_id": "vpc-0059ae5eb3bd0f8e2"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        },
        {
          "index_key": "us-east-1b",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:522838200446:route-table/rtb-0e5c1d639ffad6994",
            "id": "rtb-0e5c1d639ffad6994",
            "owner_id": "522838200446",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "development-private-route-table",
              "environment": "development",
              "owner": "terraform",
              "resource": "development-vpc-networking"
            },
            "tags_all": {
              "Name": "development-private-route-table",
              "environment": "development",
              "owner": "terraform",
              "resource": "development-vpc-networking"
            },
            "timeouts": null,
            "vpc_id": "vpc-0059ae5eb3bd0f8e2"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:522838200446:route-table/rtb-0c943b9f6fc70ac4b",
            "id": "rtb-0c943b9f6fc70ac4b",
            "owner_id": "522838200446",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "development-public-route-table",
              "environment": "development",
              "owner": "terraform",
              "resource": "development-vpc-networking"
            },
            "tags_all": {
              "Name": "development-public-route-table",
              "environment": "development",
              "owner": "terraform",
              "resource": "development-vpc-networking"
            },
            "timeouts": null,
            "vpc_id": "vpc-0059ae5eb3bd0f8e2"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "us-east-1a",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e14158f63ff54a84",
            "route_table_id": "rtb-088b086f24cabd03b",
            "subnet_id": "subnet-074756da38278cba9"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private_subnet",
            "module.vpc.aws_vpc.vpc"
          ]
        },
        {
          "index_key": "us-east-1b",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-085dba36ccfb75e66",
            "route_table_id": "rtb-0e5c1d639ffad6994",
            "subnet_id": "subnet-011942f0c7fae1fee"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private_subnet",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "us-east-1a",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d2d8bd40b855b9be",
            "route_table_id": "rtb-0c943b9f6fc70ac4b",
            "subnet_id": "subnet-0df75033464e0492c"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.vpc"
          ]
        },
        {
          "index_key": "us-east-1b",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0416a0fc9fe24a634",
            "route_table_id": "rtb-0c943b9f6fc70ac4b",
            "subnet_id": "subnet-0e9a51fc292b6a9d7"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:522838200446:security-group/sg-064fa5257273dbfc3",
            "description": "Default security group to allow inbound/outbound from the VPC",
            "egress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": true,
                "to_port": 0
              }
            ],
            "id": "sg-064fa5257273dbfc3",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": true,
                "to_port": 0
              }
            ],
            "name": "development-default-sg",
            "name_prefix": "",
            "owner_id": "522838200446",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "development-default-sg",
              "environment": "development",
              "owner": "terraform",
              "resource": "development-vpc-networking"
            },
            "tags_all": {
              "Name": "development-default-sg",
              "environment": "development",
              "owner": "terraform",
              "resource": "development-vpc-networking"
            },
            "timeouts": null,
            "vpc_id": "vpc-0059ae5eb3bd0f8e2"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "us-east-1a",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:522838200446:subnet/subnet-074756da38278cba9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.11.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-074756da38278cba9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "522838200446",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-0059ae5eb3bd0f8e2"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        },
        {
          "index_key": "us-east-1b",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:522838200446:subnet/subnet-011942f0c7fae1fee",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.11.4.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-011942f0c7fae1fee",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "522838200446",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-0059ae5eb3bd0f8e2"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "us-east-1a",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:522838200446:subnet/subnet-0df75033464e0492c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.11.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0df75033464e0492c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "522838200446",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-0059ae5eb3bd0f8e2"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        },
        {
          "index_key": "us-east-1b",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:522838200446:subnet/subnet-0e9a51fc292b6a9d7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.11.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e9a51fc292b6a9d7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "522838200446",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-0059ae5eb3bd0f8e2"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:522838200446:vpc/vpc-0059ae5eb3bd0f8e2",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.11.0.0/16",
            "default_network_acl_id": "acl-0dac4ee3886579882",
            "default_route_table_id": "rtb-0d9d219180c0d5065",
            "default_security_group_id": "sg-0db8f5c639d9dae81",
            "dhcp_options_id": "dopt-d666a6ac",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0059ae5eb3bd0f8e2",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0d9d219180c0d5065",
            "owner_id": "522838200446",
            "tags": {
              "Name": "development-vpc",
              "environment": "development",
              "owner": "terraform",
              "resource": "development-vpc-networking"
            },
            "tags_all": {
              "Name": "development-vpc",
              "environment": "development",
              "owner": "terraform",
              "resource": "development-vpc-networking"
            }
          }
        }
      ]
    }
  ]
}